[package]
name = "mice"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mice"

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0", features = ["metadata"] }
mpl-token-metadata = { version = "1.13.1", features = ["no-entrypoint"] }
solana-program ={ version = "1.14.12"}
